# opgg-black201-edition

./: .gitignore  package.json  tsconfig.json
app.asar.unpacked/electron-overlay/: package.json
app.asar.unpacked/node-ovhook/: package.json  post-install.js
app.asar.unpacked/rust-process/: Cargo.toml  package.json
app.asar.unpacked/rust-process/native/: Cargo.toml  artifacts.json  index.node
assets/css/: event.css  loading.css  main.css  patch_notes.css  popup_apm.css  remote.css  streamer_rank.css  streamer_rune.css  updater.css
assets/data/: meta.js
assets/i18n/: ddragon.js  i18n.js
assets/js/: ga4.js  remote.js  updater.js
assets/react/: react.html  renderer.450e4750.css  renderer.4a32c5f3.css  sass.2edd5e68.css  sass.d7f2938e.css
etc/: screenCapture.js  videoCapture.js
main/: app.js  base_provider.js  index.js  loading.html  lol_new.js  member.js  overlay_provider.js  preload.js  remote.html  remote_provider.js  tray.js  updater.html  window_provider.js
renderer/: App.tsx  Ramp.tsx  index.tsx  login.tsx  react.html
renderer/components/: Adsense.tsx  Ramp.tsx
renderer/constants/: index.ts
renderer/data/: career.json  champion.json  eog-aram.json  eog3.json  ingame.json  ingame2.json  ingame3.json  ingame_new.json  livechampion.json  multisearch.json  opgg-champion.json  opgg.json  test.json
renderer/hooks/: useIpcRenderer.ts
renderer/lib/: i18n.ts  index.ts  toastr.ts
renderer/redux/: reducer.ts  store.ts
renderer/sass/: ads.scss  april.scss  feedbackModal.css  header.scss  (+14 more)
rust-process/: index.node  package.json
session/: userid
(+81 files in other folders)
