[package]
name = "rust-process"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["debug", "winuser", "tlhelp32", "handleapi", "processthreadsapi", "minwindef", "ntdef", "errhandlingapi", "memoryapi"] }
ntapi = "0.3.6"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
